# neo-space-b2b

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  WhyNeoSpaceCanvas.md  docker-compose.yaml  note.txt  package-lock.json  package.json  requirements.txt  rust-analyzer.json  webpack.config.js
datasets/: starters.csv
function_calling_proto/: README.md  package-lock.json  package.json
function_calling_proto/app/: page.tsx
json-canvas-react/: index.html  package-lock.json  package.json
landing-page/: package.json  tailwind.config.ts
landing-page/app/: Navbar.tsx  page.tsx  providers.tsx
landingpage/: README.md  package-lock.json  package.json
landingpage/app/: globals.css  layout.tsx
landingpage/public/: video.mov
models/: README.md  model_to_onnx.py  tiny-gpt-example.py
ns-b2b-lightweight/: package-lock.json  package.json  vite.config.js  whatever.txt
ns-b2b-lightweight/save_data/: simple_save_example.json
public/: index.html
src/: App.css  App.js  ColorPicker.css  lib.rs  rendering.rs
wasm/: Cargo.toml  README.md
wasm/virtual-file-system/: Cargo.toml  README.md
wasm/virtual-file-system/src/: csv_metadata.rs  file_metadata.rs  file_system.rs  lib.rs  sql_conversion.rs  statistical_methods.rs  test_utils.rs  types.rs
wasm/virtual-file-system/src/core/: csv_metadata.rs  file_metadata.rs  file_system.rs  mod.rs  sql_conversion.rs  statistical_methods.rs
wasm/virtual-file-system/src/wasm/: bindings.rs  csv_metadata_bindings.rs  mod.rs
www/: eventHandlers.js  index.html  index.js  konvaSetup.js  mouse.js  renderer.js  styles.css
(+71 files in other folders)
