[package]
name = "virtual-file-system"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
uuid = { version = "1.3", features = ["v4", "js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
sha2 = "0.10.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"
