[package]
name = "virtual-file-system"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = { version = "1.3", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
uuid = { version = "1.6", features = ["v4", "js"] }
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.8"
statrs = "0.17.1"
lazy_static = "1.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
